default width of main right section updated to avoid overspill

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ img:hover{
 
 /* Project Snippets*/
 #Preview_Projects{
-  flex: 1 0 65%;
+  flex: 1 0 55%;
   flex-wrap: wrap;
   background-color: rgba(245, 240, 220, 0.479);
   justify-content: space-around;
